config/kubernetes/namespace.yaml
apiVersion: v1
kind: Namespace
metadata:
  name: shipsmart
---
apiVersion: v1
kind: Namespace
metadata:
  name: shipsmart-monitoring
